--- a/278/package.json
+++ b/278/package.json
@@ -12,6 +12,7 @@
   "author": "licker",
   "license": "ISC",
   "dependencies": {
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "lodash-es": "^4.17.21"
   }
 }
